@@ -7,10 +7,14 @@
  */
 package org.opendaylight.controller.cluster.raft;
 
+import static org.awaitility.Awaitility.await;
 import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 
+import java.time.Duration;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import org.apache.pekko.persistence.SaveSnapshotSuccess;
 import org.junit.Test;
 import org.opendaylight.controller.cluster.raft.base.messages.ApplyState;
@@ -20,6 +24,7 @@ import org.opendaylight.controller.cluster.raft.persisted.ApplyJournalEntries;
 import org.opendaylight.controller.cluster.raft.persisted.SimpleReplicatedLogEntry;
 import org.opendaylight.controller.cluster.raft.persisted.Snapshot;
 import org.opendaylight.controller.cluster.raft.persisted.UpdateElectionTerm;
+import org.opendaylight.raft.api.EntryMeta;
 
 /**
  * Tests replication and snapshots end-to-end using real RaftActors and behavior communication.
@@ -40,7 +45,7 @@ public class ReplicationAndSnapshotsIntegrationTest extends AbstractRaftActorInt
     private MockCommand payload7;
 
     @Test
-    public void runTest() {
+    public void runTest() throws Exception {
         testLog.info("testReplicationAndSnapshots starting");
 
         // Setup the persistent journal for the leader. We'll start up with 3 journal log entries (one less
@@ -153,12 +158,11 @@ public class ReplicationAndSnapshotsIntegrationTest extends AbstractRaftActorInt
     }
 
     /**
-     * Send a payload to the TestRaftActor to persist and replicate. Since snapshotBatchCount is set to
-     * 4 and we already have 3 entries in the journal log, this should initiate a snapshot. In this
-     * scenario, the follower consensus and application of state is delayed until after the snapshot
-     * completes.
+     * Send a payload to the TestRaftActor to persist and replicate. Since snapshotBatchCount is set to 4 and we already
+     * have 3 entries in the journal log, this should initiate a snapshot. In this scenario, the follower consensus and
+     * application of state is delayed until after the snapshot completes.
      */
-    private void testFirstSnapshot() {
+    private void testFirstSnapshot() throws Exception {
         testLog.info("testFirstSnapshot starting");
 
         expSnapshotState.add(recoveredPayload0);
@@ -173,7 +177,7 @@ public class ReplicationAndSnapshotsIntegrationTest extends AbstractRaftActorInt
         payload3 = sendPayloadData(leaderActor, "three");
 
         // Wait for snapshot complete.
-        MessageCollectorActor.expectFirstMatching(leaderCollectorActor, SaveSnapshotSuccess.class);
+        awaitSnapshot(leaderActor);
 
         // The snapshot index should not be advanced nor the log trimmed because replicatedToAllIndex
         // is behind due the followers not being replicated yet via AppendEntries.
@@ -184,16 +188,18 @@ public class ReplicationAndSnapshotsIntegrationTest extends AbstractRaftActorInt
 
         // Verify the persisted snapshot in the leader. This should reflect the advanced snapshot index as
         // the last applied log entry (2) even though the leader hasn't yet advanced its cached snapshot index.
-        List<Snapshot> persistedSnapshots = InMemorySnapshotStore.getSnapshots(leaderId, Snapshot.class);
-        assertEquals("Persisted snapshots size", 1, persistedSnapshots.size());
-        verifySnapshot("Persisted", persistedSnapshots.get(0), initialTerm, 2, currentTerm, 3);
-        List<ReplicatedLogEntry> unAppliedEntry = persistedSnapshots.get(0).getUnAppliedEntries();
+        var snapshotFile = leaderActor.underlyingActor().persistence().lastSnapshot();
+        assertNotNull(snapshotFile);
+
+        final var raftSnapshot = snapshotFile.readRaftSnapshot();
+        final var unAppliedEntry = raftSnapshot.unappliedEntries();
         assertEquals("Persisted Snapshot getUnAppliedEntries size", 1, unAppliedEntry.size());
-        verifyReplicatedLogEntry(unAppliedEntry.get(0), currentTerm, 3, payload3);
+        verifyReplicatedLogEntry(unAppliedEntry.getFirst(), currentTerm, 3, payload3);
+
+        verifySnapshot("Persisted", snapshotFile, initialTerm, 2);
 
         // The leader's persisted journal log should be cleared since we snapshotted.
-        List<SimpleReplicatedLogEntry> persistedLeaderJournal =
-                InMemoryJournal.get(leaderId, SimpleReplicatedLogEntry.class);
+        final var persistedLeaderJournal = InMemoryJournal.get(leaderId, SimpleReplicatedLogEntry.class);
         assertEquals("Persisted journal log size", 0, persistedLeaderJournal.size());
 
         // Allow AppendEntries to both followers to proceed. This should catch up the followers and cause a
@@ -228,16 +234,21 @@ public class ReplicationAndSnapshotsIntegrationTest extends AbstractRaftActorInt
         assertEquals("Leader replicatedToAllIndex", 2, leader.getReplicatedToAllIndex());
 
         // The followers should also snapshot so verify.
+        snapshotFile = await().atMost(Duration.ofSeconds(2))
+            .until(() -> follower1Actor.underlyingActor().persistence().lastSnapshot(), Objects::nonNull);
 
-        MessageCollectorActor.expectFirstMatching(follower1CollectorActor, SaveSnapshotSuccess.class);
-        persistedSnapshots = InMemorySnapshotStore.getSnapshots(follower1Id, Snapshot.class);
-        assertEquals("Persisted snapshots size", 1, persistedSnapshots.size());
         // The last applied index in the snapshot may or may not be the last log entry depending on
         // timing so to avoid intermittent test failures, we'll just verify the snapshot's last term/index.
-        assertEquals("Follower1 Snapshot getLastTerm", currentTerm, persistedSnapshots.get(0).getLastTerm());
-        assertEquals("Follower1 Snapshot getLastIndex", 3, persistedSnapshots.get(0).getLastIndex());
+        EntryMeta last = snapshotFile.lastIncluded();
+        for (var entry : snapshotFile.readRaftSnapshot().unappliedEntries()) {
+            last = entry;
+        }
 
-        MessageCollectorActor.expectFirstMatching(follower2CollectorActor, SaveSnapshotSuccess.class);
+        assertEquals("Follower1 Snapshot getLastTerm", currentTerm, last.term());
+        assertEquals("Follower1 Snapshot getLastIndex", 3, last.index());
+
+        await().atMost(Duration.ofSeconds(2))
+            .until(() -> follower2Actor.underlyingActor().persistence().lastSnapshot(), Objects::nonNull);
 
         MessageCollectorActor.clearMessages(leaderCollectorActor);
         MessageCollectorActor.clearMessages(follower1CollectorActor);
